# btlx-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ressource-btlx.html
examples/: sample.btlx
src/btlx/: __init__.py  _utils.py  aggregate.py  cli.py  errors.py  exporters.py  model.py  parser.py
tests/: conftest.py  test_aggregate.py  test_cli.py  test_exporters.py  test_features.py  test_parser.py  test_security.py  test_utils.py
