[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btlx-parser"
version = "1.1.0"
description = "Parser for the BTLx timber-construction exchange format (Hundegger & co.) — cut lists, volumes, structured data."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "btlx-parser contributors" }]
keywords = [
    "btlx", "btl", "timber", "carpentry", "holzbau", "charpente",
    "hundegger", "cnc", "woodworking", "cad-cam", "design2machine",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
secure = ["defusedxml>=0.7"]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.urls]
Homepage = "https://github.com/victorwhale/btlx-parser"
Issues = "https://github.com/victorwhale/btlx-parser/issues"
Changelog = "https://github.com/victorwhale/btlx-parser/blob/main/CHANGELOG.md"

[project.scripts]
btlx = "btlx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/btlx"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
